# report-compiler

./: .gitignore  CMakeLists.txt
fileio/headers/: AppConfig.hpp  ConfigFile.hpp
ocr/headers/: TextReader.hpp
ocr/source/: TextReader.cpp
ui/qt/: setup_page.ui
